--- a/src/Chapter_A3.tex
+++ b/src/Chapter_A3.tex
@@ -1,494 +1,115 @@
-\section{Manually editing tracks in Mastodon. TrackScheme.}
-\label{Manuel_Editing}
+\section{Getting your bearings in large datasets.}
 
-One of the key feature of Mastodon, the implementation of which made our lives extremely hard and rich, is the ability to edit manually at any time any spot or link within an annotation that can contains billions of them, while retaining a good and pleasant response time from the software.
-I am not even speaking of the undo/redo mechanism, which getting right was also very interesting. 
-
-In this tutorial, we will show how to do just that, from existing tracking data, the one we generated in the previous section. 
-We will use it as an opportunity to present \TrackScheme, the track visualizer of Mastodon, as well as introduce several useful editing features such as the undo/redo mechanism mentioned above.
-We will also introduce the various visual hints that help the user knowing what spot or link is currently edited or inspected, such as the \textbf{focus}, the \textbf{highlight} and the \textbf{selection}.
-
-Manual editing is often \textbf{not desirable}, first because it is not objective which might be detrimental in situations where the performance of an algorithm is evaluated, or when an unknown motion characteristics is investigated. 
-Second, because it does not look like a realistic solution when \textit{e.g.} thousands of cells are to be followed over thousands of time-points.
-Regarding the latter however, several courageous individuals sacrificed their time, energy and sometimes sanity in doing so, for the sake of finally getting a scientific answer when there was no other working solutions. 
-See for instance~\cite{MaMuT} and~\cite{McDole2018}.
-If you are going this way, Mastodon aims at providing tools to do so, in the hopefully fastest and least painful way possible. 
-Also, you can combine the fully automated approach of the previous chapter with manual editing to correct hopefully a few numbers of mistakes.
-Finally, there is also a semi-automated tracking tool, that we will introduce later.
-
-This tutorial will start by presenting you the manual editing tools of Mastodon, as well as \TrackScheme and the focus, highlight and selection tools.
-Because this catalogue of actions can be a bit dry and long to swallow, we will in the last paragraph use it to remove and rebuild some tracks from the results of the last tutorial.
+In the previous chapter we have seen how to edit single spots and links in Mastodon, what can be called point-wise editing.
+As we said before, the goal of Mastodon is to let you harness very large images, for which the number of annotations can be very large too.
+It can be very easy to get lost within such large images and loose track of where we are within the sample image and what cell we follow. 
+So we have added several features that are made especially to get your bearings in large datasets.
+More than anything, these features are about giving visual cues that ease orientation, and exploit events and signal that would help a human brain get a sense of orientation. 
+We took some inspiration from video-games, that are very good at communicating condensed and synthetic information to the player
+(but only for a limited part; there is no screenshake when you delete a spot).
 
 
+\subsection{Bookmarks in the BDV views.}
 
-\subsection{TrackScheme, the lineage view and editor.}
+The \bdv~\cite{bdv} is the image component of Mastodon and is meant to deal with very large images.
+It offers interactive and responsive user interaction, and to achieve this without any hardware acceleration, it resorts to only displaying a 2D slice through the data.
+This 2D slice can be arbitrarily positioned and oriented. 
+When it comes to annotating a 3D image, using a 2D slice is a good approach. 
+A full 3D view might actually hinders proper and efficient annotation of the data with a flat 2D screen and a mouse. 
+The 3D view leads to ambiguities about the depth positioning of your cursor, and the image data that stands between the camera eye and the plan of interest may hide it.
+Parenthetically, these issues with interacting with 3D data are best solved with virtual reality devices, but Mastodon is not a tool that exploit them.
+The 2D view offer clarity but conversely does not offer a great feeling of the context. 
+We have to live with that.
 
-First, load or retrieve the tracking data of the previous chapter. 
-You should have a few hundreds of tracks. 
-To open a TrackScheme view window, press the \menu{trackscheme} button on the main window (Figure~\ref{fig:MastodonMainWindow} page~\pageref{fig:MastodonMainWindow}).
-A window as shown in figure~\ref{fig:TrackScheme} should open.
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.8\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackScheme.png}
-     \caption{The TrackScheme window.}
-     \label{fig:TrackScheme}
-\end{figure}  
-
-The TrackScheme view offers a special way of displaying tracks. 
-If you are familiar with TrackMate, you will see that we brought the same kind of features here, but scaled to large data.
-You can think of TrackScheme as a workbench for tracks, where you will edit, cut, stitch and rename them.
-It displays a kind of "track map", where a track is laid on a panel, arranged vertically over time, as a Parisian subway train map. 
-Tracks are displayed hierarchically, discarding the spatial location of each spot. 
-Each track is laid out going through time from top to bottom.
-One horizontal line corresponds to a single time-point in the movie.
-One vertical column corresponds to a single track, that is all the spots that are connected by links over time, including divisions and merges.
-It is a great tool particularly to study and edit cell lineages.
-
-When opened, the view in TrackScheme is scaled so that the full data is shown, all tracks over all time-points. 
-Even on our small dataset, most of the tracks and spots appear as single lines or dense boxes.
-To see the details of each track, you need to zoom in and navigate around the data.
-The navigation actions their mappings are listed in the table~\ref{tab:MastodonTrackSchemeNavigationKeys} below.
-
-\begin{table}[!htbp]
-    \centering
-    \caption{Default navigation key-bindings for Mastodon-TrackScheme views.}
-    \input{src/TableTrackSchemeNavigationKeys.tex}
-    \label{tab:MastodonTrackSchemeNavigationKeys}
-\end{table}
-
-Try to zoom in until you can see the label of a few spots.
-TrackScheme implements adaptive level of details depending on the zoom level, so that we can accommodate plotting a large amount of data without compromising the responsiveness of Mastodon too much (Figure~\ref{fig:TrackSchemeZoomLevel}).
-On the finer level of details, spots are plotted as circles, with the spot label shown.
-As you zoom out, they becomes just empty circles, then points, then they disappear to only show the track as a line.
-When the zoom level is so low that several tracks coalesce, they are drawn as a gray box. 
-
-\begin{figure}
-    \centering
-    \subfloat[]{\includegraphics[width=0.25\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackScheme_Zoom_0.png}}
-    \subfloat[]{\includegraphics[width=0.35\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackScheme_Zoom_1.png}}
-    \subfloat[]{\includegraphics[width=0.35\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackScheme_Zoom_2.png}}
-    \\
-    \subfloat[]{\includegraphics[width=0.35\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackScheme_Zoom_3.png}}
-    \subfloat[]{\includegraphics[width=0.35\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackScheme_Zoom_4.png}}
-    
-    \caption{TrackScheme displays spots and links differently depending on the zoom level. \textbf{a.}~At low zoom level tracks that coalesce are shown as gray boxes. \textbf{b.}~Zooming in, the individual tracks appear first as black lines. \textbf{c.}~When they are separated enough, spots appear as black dots. \textbf{d.}~With an even higher zoom level they are shown as empty circles. \textbf{e.}~Until they grow big enough so that the spot labels can be painted. Notice the size of the sliders at the bottom and at the right of the view.}
-    \label{fig:TrackSchemeZoomLevel}
-\end{figure}  
-
-\subsection{The focus and the spot labels.}
-
-You probably noticed that some spots are painted differently from their neighbors. 
-Mastodon manages three special collections of spots and links to facilitate making sense of the data across views:
+However to facilitate orienting yourself, or retrieving a key point in the data, you can register bookmarks in the BDV views. 
+The bookmarks were already implemented in the \bdv tool itself before its use in Mastodon.
+They let you store a position and orientation in space as bookmarks. 
+You can later call them again and retrieve said position. 
 \begin{itemize}
-    \item the \textbf{selection}, painted in green, that manages a classical selection of spots and links;
-    \item the \textbf{highlight}, used to highlight the spot or link currently under the mouse;
-    \item the \textbf{focus}, particularly used in TrackScheme, to indicate what spot is currently focused on by the keyboard interaction.
+    \item First move to the position and orientation you want to store in a bookmark.
+    \item Then press \keys{\shift+B}. You should see a message prompting you to press another key (Figure~\ref{fig:BDVSettingBookmark}).
+    \item Pick one and press it. This key will be used as a tag for this bookmark.
+    \item To later retrieve the position and orientation of this bookmark, press \keys{B} then the bookmark's key. The view should animate and restore the stored position and time-point.
+    \item \keys{O} does the same things, but only restore the bookmark orientation, not its position.
 \end{itemize}
 
-\noindent We will first present the focus (see Table~\ref{tab:MastodonTrackSchemeFocusKeys}). 
-
-\begin{table}[htbp]
-    \centering
-    \caption{Default key-bindings for the focus in TrackScheme and BDV views.}
-    \input{src/TableFocusKeys.tex}
-    \label{tab:MastodonTrackSchemeFocusKeys}
-\end{table}
-
-
-\subsubsection{Moving the focus.}
-
-The spot that has the focus is painted with a dashed contour (Figure~\ref{fig:FocusedSpots}, left). 
-Only one spot can have the focus and it is set by mouse or keyboard interaction.
-Click on one spot in TrackScheme when fully zoomed, and move across track and time with the arrow cursor keys \keys{\arrowkeyleft} \keys{\arrowkeyright} \keys{\arrowkeyup} and \keys{\arrowkeydown}.
-If the focus reaches the border of the window, the view will be moved to follow it.
-You can think of the focus as the caret in a text editor. 
-It is meant to facilitate keyboard interaction.
-
-You can also jumps across branches.
-A branch in a track is a linear section of the track between divisions, fusions or the track end or start.
-\keys{\Alt+\arrowkeyup} and \keys{\Alt+\arrowkeydown} will move the focus to the branch start and end.
-In the case where you could navigate to several branches, for instance you are currently at a cell division and you can go the end of either daughter cells branches, you can navigate to one or the other with \keys{\Alt+\arrowkeydown} or \keys{\ctrl+\Alt+\arrowkeydown}.
-
+You can have many bookmarks, all identified by the key you press after the bookmark command.
+Bookmarks are saved with the BDV settings file that also saves the channel color and display range.
+You can save such a file with the \menu{File > Save BDV Settings} or the \keys{F11} key.
+The settings file is loaded when a new BDV window is displayed.
 
 \begin{figure}
     \centering
-    \includegraphics[height=0.25\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_FocusInTrackScheme.png}
-    \includegraphics[height=0.25\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_FocusInBDV.png}
-    \caption{Focused spots are painted in TrackScheme (left) and in BDV (right) views as ellipses with a dashed-contour.}
-     \label{fig:FocusedSpots}
-\end{figure}  
-
-\subsubsection{Editing the spot labels.}
-
-By the way, the focus is used to rename individual spots.
-Zoom in so that we can see the label of the spots and move the focus to a spot. 
-Press \keys{\return}.
-A small editing box appears inside the spot and lets you change its label (Figure~\ref{fig:EditSpotLabel}).
-
-By default the spot label display the spot ID. 
-If you edit the label then it shows the new label you entered.
-Editing the label of a spot does not affect its ID or any other properties. 
-The spot label is just a convenient text field that you can use to annotate cells and search them later.
-Only the spots have a label. 
-The links don't.
-
-\begin{figure}
-    \begin{minipage}{.35\textwidth}
-        \centering
-        \includegraphics[height=0.22\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_EditSpotLabel.png}
-        \caption{Editing a spot label in \TrackScheme.}
-        \label{fig:EditSpotLabel}
-    \end{minipage}
-    \hfill
-    \begin{minipage}{.55\textwidth}
-        \centering
-        \includegraphics[height=0.25\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackSchemeTrackOrder.png}
-        \caption{The left to right order of tracks in TrackScheme. Track names are set by the label of their first spot in time, regardless of the time-point this spot is in. Tracks are then laid out by alphanumerical order of the track label.}
-        \label{fig:TrackOrder}
-    \end{minipage}
-\end{figure}  
-
-
-\subsubsection{The order of tracks in TrackScheme.}
-
-The spot labels also control how the tracks are ordered in TrackScheme.
-We said before that in TrackScheme all the spatial information is discarded. 
-However the tracks are laid out in a deterministic order.
-This order is set by the label of of a track. 
-
-There is no special structure to follow individual tracks in Mastodon. 
-For this, we simply use the first spot of a track. 
-So when we speak of the label of a track, we simply means the label of the first spot (in time) in the track. 
-The tracks are arranged from left to right following the alphanumerical order of the track labels.
-So you can change the tracks arrangement by editing theirs first spot's label.
-For instance a track named \texttt{A} will be laid out to the left of a track named \texttt{B}, and a track named \texttt{D9} will be put to the left of a track named \texttt{D10} (Figure~\ref{fig:TrackOrder}).
-
-If you change the track labels now, the tracks will not move immediately in TrackScheme.
-For the new arrangement to happen, you need to either open another TrackScheme window, or to edit the data, which we will see soon.
-
-
-\subsubsection{The focus in BDV views.}
-
-The focus also works in the BDV views.
-In these views, the spot that has the focus is also painted with a thick dashed circle (Figure~\ref{fig:FocusedSpots}, right).
-Parenthetically, notice that the focus is shared across all opened views. 
-If you have a TrackScheme view and a BDV view opened, and that they both contain a display of the same spot, setting the focus in one view will update this very spot display in the other views.
-
-When you are in a BDV view and have set the focus, you can also navigate with the arrow keys.
-After clicking inside a cell, you can navigate in time and follow a cell lineage through the movie with \keys{\arrowkeyup} and \keys{\arrowkeydown}.
-If you reach the border of the view or if the cell moves in Z, the view will be translated to keep the cell in focus.
-However, you cannot edit the spot labels in a BDV view nor jump from one track to another with \keys{\arrowkeyleft} \keys{\arrowkeyright}.
-Navigating across branch with \keys{\Alt+\arrowkeyup} and \keys{\Alt+\arrowkeydown} \etc also works.
-
-
-\subsection{Synchronizing several views together.}
-\label{sec:LinkingViews}
-
-You probably noticed that both BDV and \TrackScheme views have a toolbar on the of the view itself.
-This toolbar can be hidden and shown by a press of the \keys{T} key.
-In both view types, the toolbar contains 3 gray locks \smallimg{lock_open_grey.png}, that are used to link several views together for navigation.
-For instance, if you click on the lock 1 \smallimg{lock.png} on a BDV view and the same lock on a \TrackScheme view, they will be synchronized.
-If you move with the focus in the \TrackScheme view, the BDV view will be translated to show the focused spot.
-If you \keys{Double-click} on a spot in any view, all views in sync will translate to show the spot.
-This is very handy to navigate around in TrackScheme, for instance following a cell over time while the BDV view displays where it is in the sample. 
-You can even combine several BDV views in sync at different magnification to have both an overview of the cell position in the sample and a close view of the cell itself (Figure~\ref{fig:ViewsInSync}).
-
-
-\begin{figure}
-    \centering
-    \subfloat{\includegraphics[height=0.18\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_Sync1.png}}
-    \hfill
-    \subfloat{\includegraphics[height=0.18\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_Sync2.png}}
-    \hfill
-    \subfloat{\includegraphics[height=0.18\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_Sync3.png}}
+    \includegraphics[height=0.27\textheight]{figures/Mastodon_SettingBookmark.png}
     
-    \caption{Three views of the same dataset in sync. Notice that the lock number 1 is activated on the three views (in yellow). The second view is zoomed in a XY plane. The third view is dezoomed and align with XZ.}
-    \label{fig:ViewsInSync}
-\end{figure}  
+    \caption{Settings a bookmark in a BDV view.  }
+    \label{fig:BDVSettingBookmark}
+\end{figure}
 
 
-\subsection{The highlight.}
+\subsection{Linking several views together.}
 
-The highlight is the second visual hint we will introduce. 
-You probably already noticed it and used it: the display of spots and links that are just below the mouse cursor changes.
-Highlighted spots and links are painted with a thick continuous line (Figure~\ref{fig:Highlight}). 
-To highlight a spot or link you just have to lay the mouse over it.
-As for the focus, the highlight is common to all views, and if you highlight a spot or a link in a view, its display is changed in all the views that show it.
-
-
-\subsection{Deleting individual spots and links.}
-
-The highlight is especially important for track editing. 
-The commands that delete a single object are actually applied to the highlighted spot or link.
-For instance, to delete a spot or a link in \TrackScheme, simply move the mouse cursor over it so that it is highlighted and press \keys{D}.
-You should see the tracks being rearranged following the deletion. 
-In a BDV view, the highlight and deletion mechanism is the same. 
+You can generate as many views as you want in Mastodon, and you can link several of them via the lock system \smallimg{lock.png}.
+This is a good way to improve the perception of context, by linking several views that display for instance a close-up view of the data and another view displaying a bird-eye view of it.
+We already presented this feature in the Section~\ref{sec:LinkingViews} page~\pageref{sec:LinkingViews}. 
+The figure~\ref{fig:ViewsInSync} page~\pageref{fig:ViewsInSync} shows an example of a view configuration with three views in sync, showing each a different level of desired information.
+We direct you there for details on how to use the lock system.
 
 
-\begin{figure}
-    \centering
-    \subfloat{\includegraphics[height=0.14\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_HighlightSpotBDV.png}}
-    \hfill
-    \subfloat{\includegraphics[height=0.14\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_HighlightLinkBDV.png}}
-    \hfill
-    \subfloat{\includegraphics[height=0.14\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_HighlightSpot.png}}
-    \hfill
-    \subfloat{\includegraphics[height=0.14\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_HighlightLink.png}}
-    
-    \caption{The highlight in Mastodon. The highlighted spot or link will appear painted with a thicker line, both in the BDV and TrackScheme views.}
-    \label{fig:Highlight}
-\end{figure}  
+\subsection{In \TrackScheme everything is animated.}
+
+If you went through the previous tutorial, you probably noticed that editing events are associated with animations in \TrackScheme.
+For instance, if you delete a link in the middle of a track, the 'bottom' part of the track will move to the left side of TrackScheme, in a quick animation.
+If you undo the deletion, the branch will move back to its original place the same way. 
+Deleting a spot makes it fade rather than disappear.
+These animations are more than a toy.
+Something we learned that hard way with MaMuT~\cite{MaMuT} is that point-wise editing the data can completely confuse and disorient the user.
+A single link deletion will generate a big rearrangement in the track hierarchy, and therefore will change the \TrackScheme view a lot. 
+Without any subtle cues to the user, these changes will disorient them quickly.
+Animating the editing events is a great way to hint them about what happens to the data modify in a user-friendly way.
+
+We also added some fluidity and inertia in \TrackScheme navigation. 
+In the TrackMate~\cite{TrackMate} and MaMuT~\cite{MaMuT} version of \TrackScheme, panning and zooming were done in discrete discontinuous steps, that would also lead to confusion.
+In Mastodon, moving and zooming are done continuously. 
+There is even some inertia again to emulate interacting with a tangible panel.
 
 
 
+\subsection{Spatial context in TrackScheme.}
+\label{sec:SpatialContext}
 
+There are situations where the density of cells displayed in \TrackScheme is so high that even at high zoom level this view is barely useful. 
+The hierarchical arrangement of tracks in \TrackScheme is handy to grasp how tracks behave over time.
+But since it eliminates spatial information, the neighbors of a track do not bring information to it.
 
-\subsection{Linking spots together.}
+The spatial context in \TrackScheme reconciles spatial information with the hierarchical layout. 
+In \TrackScheme views, the toolbar has a \menu{context} list box, from which you can select between \texttt{full graph} and the names of all the BDV views currently opened (typically \texttt{BigDataViewer 1}, \etc).
+When \texttt{full graph} is selected, the full lineage data is shown in \TrackScheme. 
+This is the classic view.
+If you pick an item corresponding to an opened BDV view, then this \TrackScheme view will only display the lineages of the cells currently displayed in the target BDV view. 
+And the \TrackScheme view will be updated (and animated) as you pan, move in Z, zoom or unzoom the BDV view (Figure~\ref{fig:SpatialContext}). 
 
-Creating links between existing spots happens in a similar way, except that you have to point to a source spot and another target spot for a single link.
-In \TrackScheme, move inside a spot until it is highlighted (no mouse-click).
-You must be at a zoom level large enough so that a spot is at least painted as a dot or a circle (Figure~\ref{fig:TrackSchemeZoomLevel}c, d, e). 
-Then press and hold the \keys{L} key.
-Without releasing the \keys{L} key, move the mouse out of the spot.
-You should see a red line representing the link to create (Figure~\ref{fig:TrackSchemeManualLink}).
-Move the mouse to the desired target spot, until it becomes highlighted.
-The red line should snap to it and become thicker.
-If you now release the \keys{L} key now, a new link between the source and target spot is created and in TrackScheme it should cause a rearrangement of the tracks.
-Notice that you cannot add a link between spots in the same frame.
-Also notice that you can toggle links this way.
-If you draw a link between two spots that are already connected, their link will be removed.
-
-In BDV views, it is again very similar (Figure~\ref{fig:BDVManualLink}).
-Move the mouse over a spot until it is highlighted then press and hold the \keys{L} key.
-The view will automatically move to the next frame. 
-The link to create will be painted as a white line, and the ghost shape of the source spot is painted as a dashed white ellipse. 
-Move the mouse to the target spot in this frame until it is highlighted, then release the \keys{L} key.
-The link is created.
-If you press \keys{\shift+L} in a spot, the BDV view will move to the \textbf{previous} frame, and create a backward link.
-
-You cannot move in Z while creating a link this way. 
-You must orient the BDV view so that the source and target spot are roughly in the same displayed slice. 
-However you can move in time. 
-While still holding the \keys{L} key, press the \keys{N} or \keys{[} and \keys{M} or \keys{]} key to navigate backward and forward in time.
-This way you can create links between spots separated by more than one time-point.
-
+Try it now with the data from the previous tutorial.
+Open a BDV view and a \TrackScheme view.
+In the \TrackScheme view, select the \texttt{BigDataViewer 1} item (it might not be 1 in your case).
+Then in the BDV view, zoom so that almost only one cell is displayed. 
+The \TrackScheme view should display considerably fewer tracks. 
+As you unzoom, some lineages will appear in \TrackScheme.
+You will probably see that some lineages appear in gray, with dashed lines.
+They are called "ghost" lineages: 
+These are the lineages of cells that are not within the BDV view at the time-point currently displayed, but that will enter this view later or earlier in time. 
+The context feature is immensely useful when studying tissue development or coordinated cells movement. 
 
 
 \begin{figure}
-    \centering
     \null\hfill
-    \subfloat{\includegraphics[width=0.3\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackSchemeManualLinking1.png}}
+    \includegraphics[width=0.32\textwidth]{figures/Mastodon_Context1.png}
     \hfill
-    \subfloat{\includegraphics[width=0.3\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackSchemeManualLinking2.png}}
+    \includegraphics[width=0.38\textwidth]{figures/Mastodon_Context2.png}
     \hfill
-    \subfloat{\includegraphics[width=0.3\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_TrackSchemeManualLinking3.png}}
+    \includegraphics[width=0.25\textwidth]{figures/Mastodon_Context3.png}
     \hfill\null
     
-    \caption{Manually creating links in TrackScheme. Press and hold \keys{L} while hovering the mouse over a spot. Then drag the link in red to the target spot. A new link will be created between the two spots when you release \keys{L}. Doing this between two spots that are already connected removes the link between them.}
-    \label{fig:TrackSchemeManualLink}
-\end{figure}  
-
-
-\begin{figure}
-    \centering
-    \null\hfill
-    \subfloat{\includegraphics[width=0.3\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_BDVManualLinking1.png}}
-    \hfill
-    \subfloat{\includegraphics[width=0.3\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_BDVManualLinking2.png}}
-    \hfill
-    \subfloat{\includegraphics[width=0.3\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_BDVManualLinking3.png}}
-    \hfill\null
-    
-    \caption{Manually creating links in BDV views. Press and hold \keys{L} while hovering the mouse over a spot. 
-    The viewer moves to the next frame and paints the source spot as a dashed, white outline, and the link to create as a white line.
-    Then drag the white link to the target spot. 
-    A new link will be created between the two spots when you release \keys{L}. 
-    As for \TrackScheme, doing this between two spots that are already connected removes the link between them.}
-    \label{fig:BDVManualLink}
-\end{figure}  
-
-
-
-\subsection{The selection.}
-\label{Selection_tool}
-
-The selection is the third visual cue of Mastodon and probably the most important one. 
-It behaves and has the role of a classical selection tool you would find in another software that manages a collection of data items. 
-It is meant to select a subset of spots and links and apply operations to this subset.
-Contrary to the focus and the highlight, any number of spots and links can be put in the selection. 
-
-The selection in \TrackScheme is built in a classical way. 
-Click and drag from an empty part of the view.
-A red box appears to let you select an area of the view.
-Release it when it contains the part of the tracks you want to select, and selected items should now be painted in green (Figure~\ref{fig:SelectionBox}).
-All spots and tracks in the selection box are put in the selection, even if the zoom level is too small for them to be painted.
-\keys{\ctrl+A} selects the whole data. 
-There are variants to select only all the spots (\keys{\ctrl+\Alt+A}) or only all the links (\keys{\ctrl+\shift+A}).
-
-\keys{\shift+click} on a spot or a link to toggle it in the selection.
-To clear the selection, click on an empty part of the \TrackScheme view.
-In \TrackScheme you can also add spots - but not links - to the selection using the focus.
-For instance, if you combine navigating with the focus while holding the \keys{\shift} key, spots that you navigate to will be added to the selection. 
-\keys{\shift+\Alt+\arrowkeydown} will add all the spots from the focused spot to the end of the branch it belongs to.
-Finally there are commands to add a full track from the currently focused spot. 
-\keys{\shift+Space} will select the whole track of the focused spot.
-\keys{\shift+Page\ \arrowkeydown} selects all the spots and links in the track that are forward in time relative to the focused spot, and \keys{\shift+Page\ \arrowkeyup} does the converse backward in time.
-
-The selection is shown in BDV views as red or magenta spots and links by default.
-In BDV views you can only edit the selection via \keys{\shift+click}.
-The interaction with the focus also work as described above.
-These default key-bindings are recapitulated in the table~\ref{tab:MastodonSelectionKeys}.
-
-\begin{table}[!htbp]
-    \centering
-    \caption{Default selection key-bindings for Mastodon views.}
-    \input{src/TableSelectionKeys.tex}
-    \label{tab:MastodonSelectionKeys}
-\end{table}
-
-
-\begin{figure}
-    \centering
-    \null\hfill
-    \subfloat{\includegraphics[width=0.35\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_SelectionBox1.png}}
-    \hfill
-    \subfloat{\includegraphics[width=0.35\textwidth,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_SelectionBox2.png}}
-    \hfill\null
-    
-    \caption{The selection box in \TrackScheme.}
-    \label{fig:SelectionBox}
-\end{figure}  
-
-
-
-\subsection{Editing spots and links with the selection.}
-
-The selection actions are all applied in bulk. 
-You can delete all the spots and the links currently in the selection with \keys{\shift+\backdel}.
-If your selection includes spots that are not linked, pressing \keys{\shift+K} will link them sequentially. 
-If the selection contains more than one spot per frame, only one of them, picked randomly, will be linked. 
-
-
-
-\subsection{Manually adding spots and linking them.}
-
-Adding new spots requires specifying where to add them.
-Since \TrackScheme does not include spatial information you cannot use it to add spots.
-You can only add spots in the BDV views. 
-
-To add a new spot, simply hover the mouse in a BDV view where you want the spot to be created, and press \keys{A}.
-A new spot will appear, with a radius given by the last radius value you used.
-You can respectively decrease or increase the radius of a spot by pressing \keys{Q} and \keys{E}.
-Modifiers affect the amount of radius changes.
-\keys{\shift+Q} and \keys{\shift+E} change the radius by a larger amount and \keys{\ctrl+Q} and \keys{\ctrl+E} by a finer amount.
-
-Spots created this way are not linked. 
-It might not be the quicker way to follow manually a cell over several frames. 
-To do so, you can use a little trick. 
-When you want to add a spot, and link it to an existing one, arrange the BDV view so that this source spot is visible in the displayed time-point.
-Then place the mouse cursor \textit{inside} the source spot, and press and hold \keys{A}.
-Like for creating links, the BDV moves to the next time-point, paint the source spot and link with white, dashed lines, and let you position the new target spot.
-While you keep \keys{A} pressed, you can move the target spot around.
-When it is in the desired position, release \keys{A}.
-The new spot is created and linked to the source spot.
-This way, you can quickly follow a cell or an object and manually creates a track for it by just positioning the mouse with a few presses of \keys{A}.
-
-\subsection{Moving spots around.}
-
-To move an existing spot we use a similar interaction with the spots.
-In a BDV view, place the mouse cursor inside the spot you want to move, then press and hold \keys{Space}.
-While you hold \keys{Space} pressed the spot will move where you move the mouse. 
-Release the \keys{Space} key at the desired location.
-
-
-\subsection{The undo/redo mechanism.}
-
-One of the most useful actions is undoubtedly undo and redo. 
-To undo just press \keys{\ctrl+Z} and to redo use \keys{\ctrl+\shift+Z}. 
-There is no limit to the number of undos you can do. 
-And everything can be undone in Mastodon, even tag definitions.
-In our humble opinion, this is one of the core reasons for Mastodon, a tracking and lineaging software that aims at combining automated and manual approaches, to exist.
-
-
-\subsection{Putting things in practice.}
-
-
-\begin{figure}
-    \centering
-    \null\hfill
-    \subfloat[]{\includegraphics[height=0.18\textheight]{figures/Mastodon_ManualTracking_01.png}}
-    \hfill
-    \subfloat[]{\includegraphics[height=0.18\textheight,trim=0.5cm .5cm .5cm .5cm,clip]{figures/Mastodon_ManualTracking_02.png}}
-    \hfill
-    \subfloat[]{\includegraphics[height=0.18\textheight]{figures/Mastodon_ManualTracking_03.png}}
-    \hfill\null
-    
-    \caption{Manual tracking in Mastodon. \textbf{a.}~After selecting the spots we added to each time-point. \textbf{b.}~After linking them with \keys{shift+K}. \textbf{c.}~Backtracking a cell with \keys{shift+A}.  }
-    \label{fig:ManualTracking}
-\end{figure}  
-
-
-
-Make sure you have one BDV view and one \TrackScheme view open, and that both are linked using the same lock \smallimg{lock.png}.
-In \TrackScheme, select one of the spot or link that belongs to one of the long tracks; the ones that extend from the first time-point to the last.
-Press \keys{\shift+Space}.
-You selected the whole track to which the spot or link you selected belong to.
-Press \keys{\shift+\backdel}.
-The track has been removed.
-
-Let's remove a couple of other tracks another way.
-Click and drag in \TrackScheme to draw a selection box around some long tracks.
-Then press \keys{\shift+\backdel}.
-Our model should now lack several good tracks we will try to put back manually.
-For clarity, also remove all the tracks on the right part of the \TrackScheme view, that do not start at the first time-point.
-
-In the BDV view, go to the first time-point, and look for a cell whose spot has been removed.
-Pan the view (right-click and drag), adjust the zoom (\keys{\ctrl+\shift+Mousewheel}) and the Z position (\keys{Mousewheel} with or without \keys{\shift}) so that the cell is well in view.
-Then put the mouse cursor over it and press \keys{A}.
-A spot has been added on the cell.
-The fine adjustment of the spot position in 3D can be made easier with a second BDV view.
-Open another BDV view, zoom and rotate it so that it is aligned with the XZ plane by pressing \keys{\shift+Y}.
-Add it to the lock group by toggling the right lock \smallimg{lock.png} in the toolbar.
-Go back to the first BDV view, and align it with the XY plane by pressing \keys{\shift+Z}.
-You must now find the spot we just added. 
-If you cannot find it in any of the two BDV view, look for it in \TrackScheme.
-It will be in the rightmost column at the first line, since we added the spot to the first time-point.
-Double-clicking on it in \TrackScheme will center the two BDV views on it.
-Now that the two BDV views are centered on the spot, you can adjust its XY and Z positions over the cell using the two views.
-In any of the two BDV views, put the mouse cursor, then press and hold \keys{Space}.
-Move the spot the desired location and release \keys{Space}.
-The spot might not have the right diameter to encompass the cell.
-Change its radius by pressing \keys{\shift+Q} and \keys{\shift+E} (without \keys{\shift} for finer adjustments) until you are happy with it.
-
-You must now do it for the same cell in the subsequent time-points.
-Press \keys{M} in a BDV view to move to the next time-point.
-Again, put the mouse cursor roughly at the center of the cell and press \keys{A}.
-Adjust its position with \keys{Space} and move to the next time-point.
-
-We have to repeat this for all the time-points of the movie (Figure~\ref{fig:ManualTracking}a).
-This might be tedious but does not have to be too long. 
-When I need to do this I adopt a posture similar to what I have when I play PC video-games: the right hand on the mouse, the left hand over the left side of the keyboard, over the \keys{A}, \keys{D}, \keys{Q}, and \keys{E}.
-The \keys{\shift} key can be accessed with the little finger, the \keys{Space} key with the thumb.
-The \keys{N} and \keys{M} keys to navigate over time are accessible with the left thumb also.
-
-We created a bunch of spots, but they are not linked. 
-Move to the \TrackScheme view. 
-You will find the spots you last created there always at rightmost part of the view.
-Since they are not linked, they should appear each in their separate column, in a stairway manner. 
-Select them all by dragging a selection box around them and press \keys{\shift+K}.
-They should now link together into a new track (Figure~\ref{fig:ManualTracking}b).
-With one of the spot of this newly created track selected, press \keys{\Alt+\arrowkeyup} to jump to the first spot in the track.
-Then press \keys{\return} to edit its name into something like \texttt{My first track}.
-
-We can create a track directly.
-Let's do this by backtracking a cell from the last time-point to the first.
-In a BDV view, move to the last time-point, and place the mouse cursor over an annotated cell. 
-Create a spot over it by pressing \keys{A} and center and resize it until satisfaction.
-Now keep the mouse cursor inside this spot, and press \keys{\shift+A} and hold the \keys{A} key.
-The BDV view moves to the previous time-point and creates a new spot there, already linked to the other one.
-By repeating this you can create a track that will backtrack the cell until it appears in the movie (Figure~\ref{fig:ManualTracking}c).
-
-We have now restored two of the tracks we removed at the beginning of this paragraph.
-Hopefully now you feel enough at ease to do these manipulations quickly, efficiently and without too much hassle.
-But one of the concluding beauty of this chapter is that you can restore the data as we had it at the beginning by roughly 100 presses of the \keys{\ctrl+Z} keys.
+    \caption{Context in Mastodon. The context displayed in \TrackScheme (center) and the table (right, explained in the section~\ref{sec:DataTables} page~\pageref{sec:DataTables}) is determined by what is currently displayed in the BDV window (left). The content displayed in \TrackScheme and the table id updated live as the view in the BDV window is changed by the user. }
+    \label{fig:SpatialContext}
+\end{figure}
